--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -15,7 +15,7 @@ header {
     background-color: #141414;
   }
   .header--logo {
-    height: 25px;
+    height: 100%;
   }
   .header--logo img {
     height: 100%;
